# pdf-manipulation-quality-Public

./: .gitignore  .markdownlint.json  .rules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  MODEL_COMPARISON.md  PDF_PROCESSING_README.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_HF.md  TEST_RESULTS.md  VERIFICATION_REPORT.md  app.py  clean-caches.sh  constants.py  final_transform.py  package-lock.json  package.json  pdf_processor.py  pdf_redactor.py  pdf_utils.py  pytest.ini  quick_pdf_process.py  requirements-pdf.txt  requirements-test.txt  requirements.txt  test_output_mappings.json
.github/: copilot-instructions.md
.taskmaster/: config.json  state.json
.zed/: settings.json
docs/: MODEL_COMPARISON.md  MODEL_VERSIONING.md
notebooks/: image-classifier.ipynb  population.ipynb
pdf-manipulation-quality-Public/: .gitignore  README.md  package.json  pyproject.toml  quick_pdf_process.py  requirements-hf.txt
pdf-manipulation-quality-Public/.taskmaster/tasks/: tasks.json
pdf-manipulation-quality-Public/scripts/: codebase_healer.py
pdf-manipulation-quality-Public/src/pdf_toolkit/: mcp_server.py
pdf-manipulation-quality-Public/src/pdf_toolkit.egg-info/: PKG-INFO  SOURCES.txt
pdf-manipulation-quality-Public/src/pdf_toolkit/models/: __init__.py  loader.py
pdf-manipulation-quality-Public/src/pdf_toolkit/utils/: __init__.py  pdf_utils.py
tests/: __init__.py  conftest.py  test_constants.py  test_integration.py  test_pdf_processor.py  test_pdf_redactor.py  test_pdf_redactor_integration.py  test_pdf_utils.py  test_quick_pdf_process.py
(+20 files in other folders)
